Add network status to network manager and API
